2009-12-04  Gordon Williams <gordon.williams@collabora.co.uk>

	Release 2.2.122-1

	NB#149340 - Task switcher window thumbnail quality
	 
	* src/home/hd-task-navigator.c: Set "FILTER_LINEAR" data on thumbnail
	  container. The changes to libmatchbox will now make any actors in 
	  here become linearly filtered.
	* src/tidy/tidy-blur-group.c: Add linear filtering when rendering the
	  blur texture (to give smoothed pixels when expanding the 1/2 size
	  texture). Also use linear filtering when originally rendering to the
	  1/2 size texture to provide some kind of smoothing when downscaling.

2009-12-03  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#149091 - Desktop does not respect PORTRAIT_CAPABLE flag correctly
	
	* src/main.c: Add Ctrl-Shift-R to toggle the portrait-capable flag for
	              debugging
	* src/launcher/hd-app-mgr.c
	* src/launcher/hd-app-mgr.h: Now activate accelerometer if we have any
	  windows that specify they are portrait-capable. Call 
	  hd_comp_mgr_set_portrait_if_possible if we decide we should be in 
	  portrait mode if the visible windows allow it.
	* src/mb/hd-comp-mgr.c
	* src/mb/hd-comp-mgr.h: Check if we need accelerometer every restack, 
	  and add hd_comp_mgr_may_be_portrait to see if any window objects to 
	  being in portrait. Add hd_comp_mgr_set_portrait_if_possible and
	  related code to let us know we should transition to portrait
	  if the windows allow it.	

2009-12-02  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#147129 - Flickering is seen on the blured background when the task
	            button is glowing.
	            
	* src/home/hd-render-manager.c: Updated a comment, and added some more
	  useful (ifdef'd) debug code for reblurring
	* src/mb/hd-note.c: As for AnimationActors, set the DontShow flag to
	  stop the notification preview being stacked in home and causing a
	  redraw.
	* src/util/hd-transition.c: Show the notification preview properly when
	  the transition for it starts.
