@@ -1,3 +1,10 @@
+2009-12-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	Crash fix.
+
+	* src/launcher/hd-app-mgr.c (hd_app_mgr_update_portraitness):
+	  NOP if HdCompMgr is still initializing.
+
 2009-12-04  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Release 2.2.122-1
